hard-gists/0d9f91f789f0c523b0e7/run.log
=== Docker Run Log for 0d9f91f789f0c523b0e7 ===
Started at: Mi 29. Okt 11:42:23 CET 2025

[2025-10-29 11:42:23] START: Running container for 0d9f91f789f0c523b0e7
[2025-10-29 11:42:23] SUCCESS: Container 2b89502b7550d88985559a8829733e30e7db151cdf2fede8603e23dc28923220 started for 0d9f91f789f0c523b0e7
=== Container logs for 0d9f91f789f0c523b0e7 ===
  File "/snippet.py", line 54
    except Exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 0d9f91f789f0c523b0e7 ===
[2025-10-29 11:42:25] INFO: Container 2b89502b7550d88985559a8829733e30e7db151cdf2fede8603e23dc28923220 has stopped
